--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         function h() {
           f ||
             ((f = 1),
-            "/" ==
+            "/GWQR" ==
               (c = (s.lib || "/~partytown/") + (s.debug ? "debug/" : ""))[0] &&
               ((l = r.querySelectorAll('script[type="text/partytown"]')),
               i != t
